--- a/Storage/profile.html
+++ b/Storage/profile.html
@@ -43,7 +43,7 @@
 
 		
 		<div id="profile">
-
+			// something here is broken
 			<img id="profile-image" src="img/sinon.png">
 			<input type="file" id="profile-image-input">
 			<button id="update-profile-image">Upload Profile Image</button>
