--- a/Storage/index.html
+++ b/Storage/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-	<title>Storage</title>
+	<title>Storage :o</title>
 	<meta charset="utf-8">
 	<link href="style.css" rel="stylesheet" type="text/css">
 
