--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<li><a href="color/index.html">Color</a></li>
 		<li><a href="profile/index.html">Profile</a></li>
 		<li><a href="layout/index.html">Layout</a></li>
-		<li><a href="storage/index.html">Storage</a></li>
+		<li><a href="color/index.html">Storage</a></li>
 		<li><a href="responsive">Responsive</a></li>	
 	</ul>
 	</h2>
