--- a/Storage/profile.html
+++ b/Storage/profile.html
@@ -9,6 +9,7 @@
 	<script src="https://www.gstatic.com/firebasejs/7.8.0/firebase-app.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/7.8.0/firebase-auth.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/7.8.0/firebase-database.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/7.8.0/firebase-storage.js"></script>
 
 	<script>
 		// Your web app's Firebase configuration
