--- a/profile/profile.html
+++ b/profile/profile.html
@@ -29,18 +29,31 @@
 </head>
 <body>
 	<div id="container">
-			<a href="../profile/index.html">Back</a>
 		<div id="title">
-			<h1>MMP 350 Site</h1>
+			<h1><a href="index.html">MMP 350 Site</a></h1>
 		</div>
 
 		<div id="user-info">
 			<p id="user-name"></p>
+			<a id="edit-profile-link">Edit Profile</a>
 			<button id="logout-button">Logout</button>
+		</div>
+
+		<div id="login">
+			<input id="login-email" type="text" placeholder="Email">
+			<input id="login-password" type="password" placeholder="Password">
+			<button id="login-button">Login</button>
+			<p id="login-message"></p>
+			<p><a href="create.html">Create a new account</a></p>
 		</div>
 
 		
 		<div id="profile">
+
+			<img id="profile-image" src="img/sinon.png">
+			<input type="file" id="profile-image-input">
+			<button id="update-profile-image">Upload Profile Image</button>
+
 			<input id="profile-display-name" placeholder="User name">
 			<textarea id="profile-bio" placeholder="Add your bio"></textarea>
 			<button id="update-profile">Update Profile</button>
