did some color theories

--- a/color/index.html
+++ b/color/index.html
@@ -29,12 +29,15 @@
 </head>
 <body>
 	<div id="container">
-		<div id="title">
 			<a href="../index.html"> Home </a>
+		<div id="title">
 			<h1>MMP 350 Site</h1>
 		</div>
+
 		<div id="user-info">
 			<p id="user-name"></p>
+			<a id="edit-profile-link" href="profile.html">Edit Profile</a>
+			<button id="logout-button">Logout</button>
 		</div>
 
 		<div id="login">
