added and fixed somestuff

--- a/Storage/index.html
+++ b/Storage/index.html
@@ -52,6 +52,7 @@
 
 		<div id="publish-post">
 			<textarea id="publish-text" placeholder="Compose your post..."></textarea>
+			<input type="file" id="post-image-input">
 			<button id="publish-button">Publish</button>
 		</div>
 
