--- a/Storage/index.html
+++ b/Storage/index.html
@@ -9,7 +9,8 @@
 	<script src="https://www.gstatic.com/firebasejs/7.8.0/firebase-app.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/7.8.0/firebase-auth.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/7.8.0/firebase-database.js"></script>
-
+	<script src="https://www.gstatic.com/firebasejs/7.8.0/firebase-storage.js"></script>
+	
 	<script>
 		// Your web app's Firebase configuration
 		var firebaseConfig = {
