--- a/index.html
+++ b/index.html
@@ -5,21 +5,23 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body>
 
+<body>
+	<div id="box">
 	<h1>MMP 350!</h1>
-	<h2>
+	<p>
 		<ul>
-		<li><a href="wb/index.html">Website breakdown</a></li>
-		<li><a href="auth/index.html">Authentication</a></li>
-		<li><a href="typography/index.html">Typography</a></li>
-		<li><a href="publish/index.html">Publish</a></li>
-		<li><a href="color/index.html">Color</a></li>
-		<li><a href="profile/index.html">Profile</a></li>
-		<li><a href="layout/index.html">Layout</a></li>
-		<li><a href="Storage/index.html">Storage</a></li>
-		<li><a href="responsive">Responsive</a></li>	
-	</ul>
-	</h2>
+			<li><a href="wb/index.html">Website breakdown</a></li>
+			<li><a href="auth/index.html">Authentication</a></li>
+			<li><a href="typography/index.html">Typography</a></li>
+			<li><a href="publish/index.html">Publish</a></li>
+			<li><a href="color/index.html">Color</a></li>
+			<li><a href="profile/index.html">Profile</a></li>
+			<li><a href="layout/index.html">Layout</a></li>
+			<li><a href="Storage/index.html">Storage</a></li>
+			<li><a href="responsive/index.html">Responsive</a></li>	
+		</ul>
+	</p>
+	</div>
 </body>
 </html>
