--- a/responsive/index.html
+++ b/responsive/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-	<title>Storage :o</title>
+	<title>Responsive</title>
 	<meta charset="utf-8">
 	<link href="style.css" rel="stylesheet" type="text/css">
 
@@ -31,8 +31,8 @@
 
 </head>
 <body>
+	<button><a href="../index.html"> Home </a></button>
 	<div id="container">
-			<a href="../index.html"> Home </a>
 		<div id="title">
 			<h1>MMP 350 Site</h1>
 		</div>
@@ -47,8 +47,9 @@
 			<input id="login-email" type="text" placeholder="Email">
 			<input id="login-password" type="password" placeholder="Password">
 			<button id="login-button">Login</button>
+			<button id= "create-button"><a href="create.html">Create a new account</a></button>
 			<p id="login-message"></p>
-			<a href="create.html">Create a new account</a>
+
 		</div>
 
 		<div id="publish-post">
