--- a/responsive/profile.html
+++ b/responsive/profile.html
@@ -29,9 +29,11 @@
 
 </head>
 <body>
+	
 	<div id="container">
+		
 		<div id="title">
-			<h1><a href="index.html">MMP 350 Site</a></h1>
+			<h1><a href="index.html">Done!</a></h1>
 		</div>
 
 		<div id="user-info">
@@ -48,9 +50,7 @@
 			<p><a href="create.html">Create a new account</a></p>
 		</div>
 
-		
 		<div id="profile">
-
 			<img id="profile-image" src="img/sinon.png">
 			<input type="file" id="profile-image-input">
 			<button id="update-profile-image">Upload Profile Image</button>
@@ -59,8 +59,7 @@
 			<textarea id="profile-bio" placeholder="Add your bio"></textarea>
 			<button id="update-profile">Update Profile</button>
 		</div>
-		
-		
+	
 	</div>
 
 	<script src="js/helpers.js"></script>
