--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<li><a href="profile/index.html">Profile</a></li>
 			<li><a href="layout/index.html">Layout</a></li>
 			<li><a href="Storage/index.html">Storage</a></li>
-			<li><a href="responsive/index.html">Responsive</a></li>	
+			<li><a href="responsive/index.html">Final</a></li>	
 		</ul>
 	</p>
 	</div>
