--- a/responsive/index.html
+++ b/responsive/index.html
@@ -31,40 +31,44 @@
 
 <body>
 
-	<div id="container">
-		<div id="login">
-			<div id= "nav">
-				<li><button id="home"><a href="../index.html"> Home </a></button></li>
-				<li><input id="login-email" type="text" placeholder="Email"></li>
-				<li><input id="login-password" type="password" placeholder="Password"></li>			
-				<li><button id="login-button">Login</button></li>
-				<li><button id="logout-button">Logout</button></li>
-				<li><button id= "create-button"><a href="create.html">sign Up</a></button></li>
-				<p id="login-message"></p>
-			</div>
-		</div>
 
-		<div id="title">
-			<h1>Gaming Buddy</h1>
-		</div>
+	<div id="login">
+			<button id="home"><a href="../index.html"> Home </a></button>
+			<input id="login-email" type="text" placeholder="Email">
+			<input id="login-password" type="password" placeholder="Password">		
+			<button id="login-button">Login</button>
+			<button id="logout-button">Logout</button>
+			<button id= "create-button"><a href="create.html">sign Up</a></button>
+			<p id="login-message"></p>
+	</div>
 
-		<div id="user-info">
-			<p id="user-name"></p>
-			<a id="edit-profile-link" href="Profile.html">Edit Profile</a>
-		</div>
-		
+	<div id="title">
+		<img src="img/logo.png">
+	</div>
+
+	<div id="user-info">
+		<p id="user-name"></p>
+		<a id="edit-profile-link" href="Profile.html">Edit Profile</a>
+	</div>
+
+	<button onclick="myFunction()" id="upload">Upload</button>
+	<div id="hide">
 		<div id="publish-post">
-			<textarea id="publish-text" placeholder="Compose your post..."></textarea>
+			<textarea id="publish-text" placeholder="Type Here..."></textarea>
 			<input type="file" id="post-image-input">
 			<button id="publish-button">Post</button>
 		</div>
-		
+	</div>
+	
+	<div id="container">	
 		<div id="posts"></div>		
 	</div>
+	
 	<script src="js/helpers.js"></script>
 	<script src="js/auth.js"></script>
 	<script src="js/publish.js"></script>
 	<script src="js/displayPosts.js"></script>
+	<script src="js/hide.js"></script>
 	<script>
 		fb.loadPosts();
 	</script>
